# nvidia-video-codec-rust

./: .gitignore  Cargo.toml  README.md  build.rs  script.sh
examples/: decoder.rs  importing_vulkan_buffers.rs
examples/decoder/: Cargo.toml
examples/decoder/src/: main.rs
src/safe/: api.rs  buffer.rs  builders.rs  decoder.rs  encoder.rs  mod.rs  result.rs  session.rs
src/sys/: version.rs
src/sys/linux_sys/: bindgen.sh  cuviddec.rs  nvEncodeAPI.rs  nvcuvid.rs
