[package]
name = "nvidia-video-codec-sdk"
version = "0.3.1"
edition = "2021"
license = "MIT"
rust-version = "1.70"

description = "Bindings for NVIDIA Video Codec SDK"
homepage = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
documentation = "https://docs.rs/nvidia-video-codec-sdk"
repository = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
readme = "README.md"

keywords = ["encoding", "decoding", "bindings", "nvidia", "cuda"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["ci-check"]

[dependencies]
cudarc = { version = "0.16.1", features = ["std", "runtime", "driver", "nvrtc",  "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
bincode = { version = "2.0.0", features=["serde"] }


lazy_static = "1.4.0"
# ffmpeg-next = { git = "https://github.com/Shivam5022/rust-ffmpeg" }


[dev-dependencies]
vulkano = "0.33.0"


[features]
default = []
# ci-check = ["cudarc/ci-check"]
